--- a/www/css/style.css
+++ b/www/css/style.css
@@ -2,7 +2,14 @@
 /********************* CUSTOM START **********************/
 @import url(https://fonts.googleapis.com/css?family=Roboto:400,500);
 
+.toolbar::before, .navbar::after {
+    background-color: transparent !important;
+   
+}
 
+	.navbar, .subnavbar, .toolbar {
+    background: #000 none repeat scroll 0 0 !important;
+}
 
 	.swiper-container {
 		height:100%;
@@ -199,7 +206,18 @@
     width: 100%;
     z-index: 2;
 }
-	
+
+
+.panel {
+    background: rgba(0,0,0,0.3) none repeat scroll 0 0 !important;
+}
+
+.navbar {
+    background-color: transparent !important;
+	color:#fff;
+	border:0px !important;
+}
+
 /********************* CUSTOM END ************************/
 
 button, a.button:link, a.button:active, a.button:visited, a.button:hover {
